--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 					<a href="#" class="navbar-brand">
 						<small >
 							<h6><i class="fa fa-phone"></i>
-							联系电话 ：18330177221&emsp;&emsp;<i class="fa  fa-envelope"></i>&nbsp;邮箱：lxysoft@foxmail.com</h6>
+							<i class="fa  fa-envelope"></i>&nbsp;邮箱：lxysoft@foxmail.com</h6>
 						</small>
 					</a>
 
