--- a/resume.html
+++ b/resume.html
@@ -264,6 +264,7 @@
 																	<div class="profile-info-name"> 网站 </div>
 
 																	<div class="profile-info-value">
+																		<a href="http://lxysoft.github.io" target="_blank">lxysoft.github.io</a><br、>
 																		<a href="http://www.lxysoft.ren" target="_blank">www.lxysoft.ren(备案中)</a>
 																	</div>
 																</div>
