--- a/gallery.html
+++ b/gallery.html
@@ -59,24 +59,57 @@
 						<div class="row">
 							<div class="col-xs-12">
 								<!-- PAGE CONTENT BEGINS -->
-								<div style="padding-left:30px;">				
-									<h3 class="smaller lighter grey">主目录</h3>
-									<br/>
+								<div>
 									<ul class="ace-thumbnails clearfix">
 										<!-- #section:pages/gallery -->
 										<li>
-											<a href="img/主目录.png" title="Photo Title" data-rel="colorbox">
-												<img width="200" height="200" alt="200x200" src="img/主目录.png" />
+											<a href="aceAdmin/assets/images/gallery/image-1.jpg" title="Photo Title" data-rel="colorbox">
+												<img width="150" height="150" alt="150x150" src="aceAdmin/assets/images/gallery/thumb-1.jpg" />
 											</a>
+
+											<div class="tags">
+												<span class="label-holder">
+													<span class="label label-info">breakfast</span>
+												</span>
+
+												<span class="label-holder">
+													<span class="label label-danger">fruits</span>
+												</span>
+
+												<span class="label-holder">
+													<span class="label label-success">toast</span>
+												</span>
+
+												<span class="label-holder">
+													<span class="label label-warning arrowed-in">diet</span>
+												</span>
+											</div>
+
+											<div class="tools">
+												<a href="#">
+													<i class="ace-icon fa fa-link"></i>
+												</a>
+
+												<a href="#">
+													<i class="ace-icon fa fa-paperclip"></i>
+												</a>
+
+												<a href="#">
+													<i class="ace-icon fa fa-pencil"></i>
+												</a>
+
+												<a href="#">
+													<i class="ace-icon fa fa-times red"></i>
+												</a>
+											</div>
 										</li>
-									</ul>	
-									<h3 class="smaller lighter grey">分目录</h3>
-									<br/>
-									<ul class="ace-thumbnails clearfix">
-										
+
 										<li>
-											<a href="img/分目录1.png" data-rel="colorbox">
-												<img width="200" height="200" alt="200x200" src="img/分目录1.png" />
+											<a href="aceAdmin/assets/images/gallery/image-2.jpg" data-rel="colorbox">
+												<img width="150" height="150" alt="150x150" src="aceAdmin/assets/images/gallery/thumb-2.jpg" />
+												<div class="text">
+													<div class="inner">Sample Caption on Hover</div>
+												</div>
 											</a>
 										</li>
 
@@ -84,24 +117,166 @@
 
 										<!-- #section:pages/gallery.caption -->
 										<li>
-											<a href="img/分目录2.png" data-rel="colorbox">
-												<img width="200" height="200" alt="200x200" src="img/分目录2.png" />
+											<a href="aceAdmin/assets/images/gallery/image-3.jpg" data-rel="colorbox">
+												<img width="150" height="150" alt="150x150" src="aceAdmin/assets/images/gallery/thumb-3.jpg" />
+												<div class="text">
+													<div class="inner">Sample Caption on Hover</div>
+												</div>
 											</a>
+
+											<div class="tools tools-bottom">
+												<a href="#">
+													<i class="ace-icon fa fa-link"></i>
+												</a>
+
+												<a href="#">
+													<i class="ace-icon fa fa-paperclip"></i>
+												</a>
+
+												<a href="#">
+													<i class="ace-icon fa fa-pencil"></i>
+												</a>
+
+												<a href="#">
+													<i class="ace-icon fa fa-times red"></i>
+												</a>
+											</div>
 										</li>
 
 										<!-- /section:pages/gallery.caption -->
 										<li>
-											<a href="img/分目录3.png" data-rel="colorbox">
-												<img width="200" height="200" alt="200x200" src="img/分目录3.png" />
+											<a href="aceAdmin/assets/images/gallery/image-4.jpg" data-rel="colorbox">
+												<img width="150" height="150" alt="150x150" src="aceAdmin/assets/images/gallery/thumb-4.jpg" />
+												<div class="tags">
+													<!-- #section:pages/gallery.tags -->
+													<span class="label-holder">
+														<span class="label label-info arrowed">fountain</span>
+													</span>
+
+													<span class="label-holder">
+														<span class="label label-danger">recreation</span>
+													</span>
+
+													<!-- /section:pages/gallery.tags -->
+												</div>
 											</a>
+
+											<div class="tools tools-top">
+												<a href="#">
+													<i class="ace-icon fa fa-link"></i>
+												</a>
+
+												<a href="#">
+													<i class="ace-icon fa fa-paperclip"></i>
+												</a>
+
+												<a href="#">
+													<i class="ace-icon fa fa-pencil"></i>
+												</a>
+
+												<a href="#">
+													<i class="ace-icon fa fa-times red"></i>
+												</a>
+											</div>
 										</li>
 
 										<li>
 											<div>
-												<a href="img/分目录4.png" data-rel="colorbox">
-													<img width="200" height="200" alt="200x200" src="img/分目录4.png" />
+												<img width="150" height="150" alt="150x150" src="aceAdmin/assets/images/gallery/thumb-5.jpg" />
+												<div class="text">
+													<div class="inner">
+														<span>Some Title!</span>
+
+														<br />
+														<a href="aceAdmin/assets/images/gallery/image-5.jpg" data-rel="colorbox">
+															<i class="ace-icon fa fa-search-plus"></i>
+														</a>
+
+														<a href="#">
+															<i class="ace-icon fa fa-user"></i>
+														</a>
+
+														<a href="#">
+															<i class="ace-icon fa fa-share"></i>
+														</a>
+													</div>
+												</div>
+											</div>
+										</li>
+
+										<li>
+											<a href="aceAdmin/assets/images/gallery/image-6.jpg" data-rel="colorbox">
+												<img width="150" height="150" alt="150x150" src="aceAdmin/assets/images/gallery/thumb-6.jpg" />
+											</a>
+
+											<div class="tools tools-right">
+												<a href="#">
+													<i class="ace-icon fa fa-link"></i>
+												</a>
+
+												<a href="#">
+													<i class="ace-icon fa fa-paperclip"></i>
+												</a>
+
+												<a href="#">
+													<i class="ace-icon fa fa-pencil"></i>
+												</a>
+
+												<a href="#">
+													<i class="ace-icon fa fa-times red"></i>
 												</a>
 											</div>
+										</li>
+
+										<li>
+											<a href="aceAdmin/assets/images/gallery/image-1.jpg" data-rel="colorbox">
+												<img width="150" height="150" alt="150x150" src="aceAdmin/assets/images/gallery/thumb-1.jpg" />
+											</a>
+
+											<div class="tools">
+												<a href="#">
+													<i class="ace-icon fa fa-link"></i>
+												</a>
+
+												<a href="#">
+													<i class="ace-icon fa fa-paperclip"></i>
+												</a>
+
+												<a href="#">
+													<i class="ace-icon fa fa-pencil"></i>
+												</a>
+
+												<a href="#">
+													<i class="ace-icon fa fa-times red"></i>
+												</a>
+											</div>
+										</li>
+
+										<li>
+											<a href="aceAdmin/assets/images/gallery/image-2.jpg" data-rel="colorbox">
+												<img width="150" height="150" alt="150x150" src="aceAdmin/assets/images/gallery/thumb-2.jpg" />
+											</a>
+
+											<!-- #section:pages/gallery.tools -->
+											<div class="tools tools-top in">
+												<a href="#">
+													<i class="ace-icon fa fa-link"></i>
+												</a>
+
+												<a href="#">
+													<i class="ace-icon fa fa-paperclip"></i>
+												</a>
+
+												<a href="#">
+													<i class="ace-icon fa fa-pencil"></i>
+												</a>
+
+												<a href="#">
+													<i class="ace-icon fa fa-times red"></i>
+												</a>
+											</div>
+
+											<!-- /section:pages/gallery.tools -->
 										</li>
 									</ul>
 								</div><!-- PAGE CONTENT ENDS -->
