--- a/gallery.html
+++ b/gallery.html
@@ -59,9 +59,21 @@
 						<div class="row">
 							<div class="col-xs-12">
 								<!-- PAGE CONTENT BEGINS -->
-								<div>
+								<div style="padding-left:30px;">				
+									<h3 class="smaller lighter grey">主目录</h3>
+									<br/>
 									<ul class="ace-thumbnails clearfix">
 										<!-- #section:pages/gallery -->
+										<li>
+											<a href="img/主目录.png" title="Photo Title" data-rel="colorbox">
+												<img width="200" height="200" alt="200x200" src="img/主目录.png" />
+											</a>
+										</li>
+									</ul>	
+									<h3 class="smaller lighter grey">分目录</h3>
+									<br/>
+									<ul class="ace-thumbnails clearfix">
+										
 										<li>
 											<a href="img/分目录1.png" data-rel="colorbox">
 												<img width="200" height="200" alt="200x200" src="img/分目录1.png" />
