--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 		<meta charset="utf-8" />
-		<title>简历</title>
+		<title>履历</title>
 
 		<meta name="description" content="3 styles with inline editable feature" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
@@ -135,7 +135,7 @@
 
 	<body class="no-skin">
 		<!-- #section:basics/navbar.layout -->
-		<div id="navbar" style="background-color: #2ECEE7;" class="navbar navbar-default          ace-save-state">
+		<div id="navbar" style="background-image: url(img/bj1.jpg); background-size:cover" class="navbar navbar-default          ace-save-state">
 			<div class="navbar-container ace-save-state" id="navbar-container">
 				<!-- #section:basics/sidebar.mobile.toggle -->
 				<button type="button" class="navbar-toggle menu-toggler pull-left" id="menu-toggler" data-target="#sidebar">
@@ -149,12 +149,12 @@
 				</button>
 
 				<!-- /section:basics/sidebar.mobile.toggle -->
-				<div class="navbar-header pull-left">
+				<div class="navbar-header pull-left" >
 					<!-- #section:basics/navbar.layout.brand -->
-					<a href="#" class="navbar-brand">
+					<a href="#" class="navbar-brand" >
 						<small>
-							<i class="fa fa-leaf"></i>
-							个人简历
+							<i class="glyphicon glyphicon-briefcase"></i>
+							&emsp;履历介绍
 						</small>
 					</a>
 
@@ -164,33 +164,11 @@
 
 					<!-- /section:basics/navbar.toggle -->
 				</div>
-
-				<!-- #section:basics/navbar.dropdown -->
-				<div class="navbar-buttons navbar-header pull-right" role="navigation">
-					<div class="navbar-header pull-left">
-					<!-- #section:basics/navbar.layout.brand -->
-					<a href="#" class="navbar-brand">
-						<small >
-							<h6>
-							<i class="fa  fa-envelope"></i>&nbsp;邮箱：lxysoft@foxmail.com</h6>
-						</small>
-					</a>
-
-					<!-- /section:basics/navbar.layout.brand -->
-
-					<!-- #section:basics/navbar.toggle -->
-
-					<!-- /section:basics/navbar.toggle -->
-				</div>
-					
-				</div>
-
-				<!-- /section:basics/navbar.dropdown -->
 			</div><!-- /.navbar-container -->
 		</div>
 
 		<!-- /section:basics/navbar.layout -->
-		<div class="main-container ace-save-state" id="main-container">
+		<div   class="main-container ace-save-state" id="main-container">
 			<script type="text/javascript">
 				try{ace.settings.loadState('main-container')}catch(e){}
 			</script>
@@ -203,23 +181,12 @@
 
 				<div class="sidebar-shortcuts" id="sidebar-shortcuts">
 					<div class="sidebar-shortcuts-large" id="sidebar-shortcuts-large">
-						<button class="btn btn-success disabled">
-							<i class="ace-icon fa fa-signal "></i>
-						</button>
-
-						<button class="btn btn-info disabled">
-							<i class="ace-icon fa fa-pencil"></i>
-						</button>
-
-						<!-- #section:basics/sidebar.layout.shortcuts -->
-						<button class="btn btn-warning disabled">
-							<i class="ace-icon fa fa-users"></i>
-						</button>
-
-						<button class="btn btn-danger disabled">
-							<i class="ace-icon fa fa-cogs"></i>
-						</button>
-
+						<h5 class="grey lighter smaller">
+							<span  class="gray bigger-125">
+								<i class="ace-icon fa fa-sitemap"></i>
+								导航栏
+							</span>
+						</h5>
 						<!-- /section:basics/sidebar.layout.shortcuts -->
 					</div>
 
@@ -237,7 +204,7 @@
 				<ul id="nosel" class="nav nav-list">
 					<li onclick="select(this);" class="active open">
 						<a href="resume.html" target="content">
-							<i class="menu-icon fa fa-tachometer"></i>
+							<i class="menu-icon fa fa-envelope"></i>
 							<span class="menu-text"> 个人信息 </span>
 						</a>
 
@@ -245,7 +212,7 @@
 					</li>
 					<li onclick="select(this);" class="">
 						<a href="timeline.html" target="content" >
-							<i class="menu-icon fa fa-list-alt"></i>
+							<i class="menu-icon fa fa-share-alt"></i>
 							<span class="menu-text">履历时间轴 </span>
 						</a>
 
