--- a/resume.html
+++ b/resume.html
@@ -171,19 +171,15 @@
 													<div class="row">
 														<div class="col-xs-12 col-sm-3 center">
 															<span class="profile-picture">
-																<img class="editable img-responsive" alt="Alex's Avatar" id="avatar2" src="img/李晓阳.JPG">
+																<img class="editable img-responsive" alt="Alex's Avatar" id="avatar2" src="img/lxy.jpg">
 															</span>
 
 															<div class="space space-4"></div>
-
-															<a href="#" class="btn btn-sm btn-block btn-primary disabled">
-																<i class="ace-icon fa fa-envelope bigger-110"></i>
-																<span class="bigger-110">邮箱：lxysoft@foxmail.com</span>
-															</a>
 														</div><!-- /.col -->
 
 														<div class="col-xs-12 col-sm-9">
 															<h4 class="blue">
+																<i class="glyphicon glyphicon-user"></i>
 																<span class="middle">李晓阳</span>
 
 																<span class="label label-purple arrowed-in-right">
@@ -261,30 +257,14 @@
 
 															<div class="profile-user-info">
 																<div class="profile-info-row">
-																	<div class="profile-info-name"> 网站 </div>
+																	<div class="profile-info-name"> 网址 </div>
 
 																	<div class="profile-info-value">
-																		<a href="http://lxysoft.github.io" target="_blank">lxysoft.github.io</a><br/>
+																		<a href="http://lxysoft.github.io" target="_blank">
+																			<i class="fa fa-github-alt" aria-hidden="true"></i>&emsp;
+																			lxysoft.github.io
+																		</a><br/>
 																		<a href="http://www.lxysoft.ren" target="_blank">www.lxysoft.ren(备案中)</a>
-																	</div>
-																</div>
-
-																<div class="profile-info-row">
-																	<div class="profile-info-name">
-																		<i class="middle ace-icon fa fa-qq bigger-150 light-blue"></i>
-																	</div>
-																	<div class="profile-info-value">
-																		<span>472261314</span>
-																	</div>
-																</div>
-
-																<div class="profile-info-row">
-																	<div class="profile-info-name">
-																		<i class="middle ace-icon fa fa-weixin bigger-150 light-blue"></i>
-																	</div>
-
-																	<div class="profile-info-value">
-																		<span>meixiwangmeishiwang</span>
 																	</div>
 																</div>
 															</div>
@@ -299,25 +279,19 @@
 																<div class="widget-header widget-header-small">
 																	<h4 class="widget-title smaller">
 																		<i class="ace-icon fa fa-check-square-o bigger-110"></i>
-																		个人简介
+																		谈感悟
 																	</h4>
 																</div>
 
 																<div class="widget-body">
 																	<div class="widget-main">
 																		<p>
-																			&emsp;&emsp;俗话说一入JAVA深似海，学习的知识很多很多，具有较好的自学能力，在伴随时代发展、技术更迭，自学技术就显得格外重要
-																			，学习工作中使用mybase总结了一套学习笔记，包含了初级--高级--框架。每当遇到新的问题或新的知
-																			识时我都会打开它记录下来，大幅提升了总结能力，养成了文档记录的习惯。个人认为学的种类多并不代表杂，涉及的知识广了在解决问题是就会有更多的解决方案，
-																			可以选出最好最合适的方案，如果没有接触过，一些好用实用的方案就会被忽略。当然这个大多也是指围绕Java开发时使用的工具。
-																			<br/>
-																			个人技能：<br/>
-																			&emsp;1、熟悉J2EE基本框架，能基于J2EE的Spring、SpringMVC的MVC模式利用JS、JQuery、Mybatis结合Tomcat等Web发布器及XML技术，
-																					熟练使用Oracle、Mysql等进行web应用开发。<br/>
-																			&emsp;2、精通HTML，熟悉XML、CSS、Java Script等网页技术，了解UML建模语言。<br/>
-																			&emsp;3、使用过echars、d3.js、UEditor、bootstrap、poi等第三方工具。<br/>
-																			&emsp;4、能够使用easyui、ace admin构建企业OA或互联网后台。<br/>
-																			&emsp;5、熟练使用Myeclipse、Eclipse等相关开发工具，使用过WeX5开发HTML5的混合应用。
+																			&emsp;&emsp;在安逸的生活环境下很容易满足，从而不知进取、安于现状、没有目标。趁年轻不能拿时间换钱，而是用时间
+																			学习知识同时使用学习的知识创造价值，以此迭代。这不仅收获到了知识，也会收获财富。同时培养总结的习惯，将遇到的问题记录下来，
+																			或是发表博客，以我个人而言我比较喜欢自己记录下来。记在myBase中，再遇到同样的问题，不会再摔第二次。工作经验的积累就是
+																			对bug的积累还有在业务逻辑上的积累。能以多种方式将业务逻辑转换为代码，并从中选取最快捷最高效的方式。就像使用敏捷开发框架Jfinal，
+																			它就是比较适合中小项目，用于缩短开发时间，提高工作效率，有效的节约开发成本。但有得必有失，其抛弃了MVC的架构，使其后期维护比较困难。
+																			只有使用过之后才知道功能，怎么样实际应用的工作中。接触多种多样的开源项目的同时，也要培养专长。
 																		</p>
 																	</div>
 																</div>
