--- a/timeline.html
+++ b/timeline.html
@@ -51,7 +51,7 @@
 								时间轴
 								<small>
 									<i class="ace-icon fa fa-angle-double-right"></i>
-									&emsp;身为工科生文笔较差，还望海涵。小生在此谢过了！
+									&emsp;身为工科生文笔较差，还望海涵。
 								</small>
 							</h1>
 						</div><!-- /.page-header -->
@@ -97,7 +97,7 @@
 																<div class="widget-main">
 																	此时我来到了这里---
 																	<span class="red">北京</span>。<br/>
-																	来到这里寻求我的机遇，寻求我的伯乐。滴水之恩，当涌泉相报。知遇之恩大于天。我缺少的就是您可以给我的一个机会。
+																	来到这里寻求我的机遇，寻求伯乐。我缺少的就是您可以给我的一个机会。
 																	<div class="space-6"></div>
 																</div>
 															</div>
@@ -114,7 +114,7 @@
 															<div class="widget-body">
 																<div class="widget-main">
 																	曾几何时，我多次想过一个问题。我是不是真的要呆在这个2.9999线城市。毕竟IT行业大都还都是驻扎在北上广的，在小城市小公司
-																	就如同井底之蛙，见不到外面世界的美好。经过考虑，此时（2015/9）我决定了辞职。要去离家不是太远的北京闯荡。想要良好的提升
+																	就如同井底之蛙，见不到外面世界的美好。经过考虑，此时（2016/9）我决定了辞职。要去离家不是太远的北京闯荡。想要良好的提升
 																	空间与远见卓识见谛，还是要有足够大的平台与市场。人活一世不能只图安稳，要在艰辛中不断挺进，不忘初心。
 																</div>
 															</div>
