--- a/resume.html
+++ b/resume.html
@@ -264,7 +264,7 @@
 																			<i class="fa fa-github-alt" aria-hidden="true"></i>&emsp;
 																			lxysoft.github.io
 																		</a><br/>
-																		<a href="http://www.lxysoft.ren" target="_blank">www.lxysoft.ren(备案中)</a>
+																		<a href="http://www.lxysoft.ren" target="_blank">www.lxysoft.ren</a>
 																	</div>
 																</div>
 															</div>
