--- a/gallery.html
+++ b/gallery.html
@@ -104,6 +104,46 @@
 											</div>
 										</li>
 									</ul>
+									<h3 class="smaller lighter grey">笔记目录蜘蛛图</h3>
+									<br>
+									<ul class="ace-thumbnails clearfix">
+										<li>
+											<a href="Base/sjkBase.html" target="_blank">
+												<img width="200" height="200" alt="200x200" src="img/数据库.png" />
+											</a>
+										</li>
+
+										<!-- /section:pages/gallery -->
+
+										<!-- #section:pages/gallery.caption -->
+										<li>
+											<a href="Base/JavaSEBase.html" target="_blank">
+												<img width="200" height="200" alt="200x200" src="img/Java_SE.png" title="JavaSE" />
+											</a>
+										</li>
+
+										<!-- /section:pages/gallery.caption -->
+										<li>
+											<a href="Base/JavaEEBase.html" target="_blank">
+												<img title="JavaEE" width="200" height="200" alt="200x200" src="img/JavaEE_webServlet.png" />
+											</a>
+										</li>
+
+										<li>
+											<div>
+												<a href="Base/kjBase.html" target="_blank">
+													<img width="200" height="200" alt="200x200" src="img/框架.png" title="框架"/>
+												</a>
+											</div>
+										</li>
+										<li>
+											<div>
+												<a href="img/Linux.png" data-rel="colorbox">
+													<img width="200" height="200" alt="200x200" src="img/Linux.png" title="Linux"/>
+												</a>
+											</div>
+										</li>
+									</ul>
 								</div><!-- PAGE CONTENT ENDS -->
 							</div><!-- /.col -->
 						</div><!-- /.row -->
