--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 		</header>
 		<p>换一种方式？  将信息以列表方式展示。</p>
 		<ul class="actions">
-			<li><a href="landing.html" class="button next">NOW 转变</a></li>
+			<li><a href="Landing.html" class="button next">NOW 转变</a></li>
 		</ul>
 	</div>
 </section>
