--- a/Jfinal.html
+++ b/Jfinal.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>分页封装</title>
+	<title>Jfinal 敏捷开发框架</title>
 	<!-- Begin Jekyll SEO tag v2.0.0 -->
 <title>Tempus</title>
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
