--- a/index.html
+++ b/index.html
@@ -1,273 +1,129 @@
 <!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-		<meta charset="utf-8" />
-		<meta name="description" content="Java技术博客，技术文章">
-		<meta name="keywords" content="李晓阳,个人博客,blog,Java,java,Java技术文章,简便快捷开发,论坛,个人论坛,李晓阳github,个人笔记,随手记,分页工具,初级封装工具,博文论坛,github,代码托管,html,css,javaScript,javascript,html5,HTML5,css3">
-		<title>履历</title>
+<html>
 
-		<meta name="description" content="3 styles with inline editable feature" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
+<head>
+	<title>Blog Home</title>
+	<!-- Begin Jekyll SEO tag v2.0.0 -->
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+<!-- End Jekyll SEO tag -->
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<!--[if lte IE 8]><script src="js/ie/html5shiv.js"></script><![endif]-->
+	<link rel="stylesheet" href="css/main.css" />
+	<!--[if lte IE 9]><link rel="stylesheet" href="css/ie9.css" /><![endif]-->
+	<!--[if lte IE 8]><link rel="stylesheet" href="css/ie8.css" /><![endif]-->
+</head>
+<body>
+    <!-- Wrapper -->
+<div id="wrapper">
 
-		<!-- bootstrap & fontawesome -->
-		<link rel="stylesheet" href="aceAdmin/assets/css/bootstrap.css" />
-		<link rel="stylesheet" href="aceAdmin/components/font-awesome/css/font-awesome.css" />
+<!-- Header -->
+<header id="header" class="alt">
+	<a href="index.html" class="logo"><strong>Lxy</strong> <span>我的博客首页</span></a>
+	<nav>
+		<a href="#menu">菜单</a>
+	</nav>
+</header>
 
-		<!-- page specific plugin styles -->
-		<link rel="stylesheet" href="aceAdmin/components/_mod/jquery-ui.custom/jquery-ui.custom.css" />
-		<link rel="stylesheet" href="aceAdmin/components/jquery.gritter/css/jquery.gritter.css" />
-		<link rel="stylesheet" href="aceAdmin/components/select2/dist/css/select2.css" />
-		<link rel="stylesheet" href="aceAdmin/components/bootstrap-datepicker/dist/css/bootstrap-datepicker3.css" />
-		<link rel="stylesheet" href="aceAdmin/components/_mod/x-editable/bootstrap-editable.css" />
+<!-- Menu -->
+<nav id="menu">
+	<ul class="links">
+		        <li><a href="index.html">首页</a></li>
+		        <li><a href="Landing.html">以列表展示</a></li>
+		        <li><a target="_blank"  href="http://www.lxysoft.ren">关于我</a></li>
+	</ul>
+	<ul class="actions vertical">
+		<li><a href="#" class="button fit">返回</a></li>
+	</ul>
+</nav> <!-- Banner -->
 
-		<!-- text fonts -->
-		<link rel="stylesheet" href="aceAdmin/assets/css/ace-fonts.css" />
-
-		<!-- ace styles -->
-		<link rel="stylesheet" href="aceAdmin/assets/css/ace.css" class="ace-main-stylesheet" id="main-ace-style" />
-
-		<!--[if lte IE 9]>
-			<link rel="stylesheet" href="aceAdmin/assets/css/ace-part2.css" class="ace-main-stylesheet" />
-		<![endif]-->
-		<link rel="stylesheet" href="aceAdmin/assets/css/ace-skins.css" />
-		<link rel="stylesheet" href="aceAdmin/assets/css/ace-rtl.css" />
-
-		<!--[if lte IE 9]>
-		  <link rel="stylesheet" href="aceAdmin/assets/css/ace-ie.css" />
-		<![endif]-->
-
-		<!-- inline styles related to this page -->
-
-		<!-- ace settings handler -->
-		<script src="aceAdmin/assets/js/ace-extra.js"></script>
-
-		<!-- HTML5shiv and Respond.js for IE8 to support HTML5 elements and media queries -->
-
-		<!--[if lte IE 8]>
-		<script src="aceAdmin/components/html5shiv/dist/html5shiv.min.js"></script>
-		<script src="aceAdmin/components/respond/dest/respond.min.js"></script>
-		<![endif]-->
-		<!-- basic scripts -->
-
-		<!--[if !IE]> -->
-		<script src="aceAdmin/components/jquery/dist/jquery.js"></script>
-
-		<!-- <![endif]-->
-
-		<!--[if IE]>
-<script src="aceAdmin/components/jquery.1x/dist/jquery.js"></script>
-<![endif]-->
-		<script type="text/javascript">
-			if('ontouchstart' in document.documentElement) document.write("<script src='aceAdmin/components/_mod/jquery.mobile.custom/jquery.mobile.custom.js'>"+"<"+"/script>");
-		</script>
-		<script src="aceAdmin/components/bootstrap/dist/js/bootstrap.js"></script>
-
-		<!-- page specific plugin scripts -->
-
-		<!--[if lte IE 8]>
-		  <script src="aceAdmin/components/ExplorerCanvas/excanvas.js"></script>
-		<![endif]-->
-		<script src="aceAdmin/components/_mod/jquery-ui.custom/jquery-ui.custom.js"></script>
-		<script src="aceAdmin/components/jqueryui-touch-punch/jquery.ui.touch-punch.js"></script>
-		<script src="aceAdmin/components/jquery.gritter/js/jquery.gritter.js"></script>
-		<script src="aceAdmin/components/bootbox.js/bootbox.js"></script>
-		<script src="aceAdmin/components/_mod/easypiechart/jquery.easypiechart.js"></script>
-		<script src="aceAdmin/components/bootstrap-datepicker/dist/js/bootstrap-datepicker.js"></script>
-		<script src="aceAdmin/components/jquery.hotkeys/index.js"></script>
-		<script src="aceAdmin/components/_mod/bootstrap-wysiwyg/bootstrap-wysiwyg.js"></script>
-		<script src="aceAdmin/components/select2/dist/js/select2.js"></script>
-		<script src="aceAdmin/components/fuelux/js/spinbox.js"></script>
-		<script src="aceAdmin/components/_mod/x-editable/bootstrap-editable.js"></script>
-		<script src="aceAdmin/components/_mod/x-editable/ace-editable.js"></script>
-		<script src="aceAdmin/components/jquery.maskedinput/dist/jquery.maskedinput.js"></script>
-
-		<!-- ace scripts -->
-		<script src="aceAdmin/assets/js/src/elements.scroller.js"></script>
-		<script src="aceAdmin/assets/js/src/elements.colorpicker.js"></script>
-		<script src="aceAdmin/assets/js/src/elements.fileinput.js"></script>
-		<script src="aceAdmin/assets/js/src/elements.typeahead.js"></script>
-		<script src="aceAdmin/assets/js/src/elements.wysiwyg.js"></script>
-		<script src="aceAdmin/assets/js/src/elements.spinner.js"></script>
-		<script src="aceAdmin/assets/js/src/elements.treeview.js"></script>
-		<script src="aceAdmin/assets/js/src/elements.wizard.js"></script>
-		<script src="aceAdmin/assets/js/src/elements.aside.js"></script>
-		<script src="aceAdmin/assets/js/src/ace.js"></script>
-		<script src="aceAdmin/assets/js/src/ace.basics.js"></script>
-		<script src="aceAdmin/assets/js/src/ace.scrolltop.js"></script>
-		<script src="aceAdmin/assets/js/src/ace.ajax-content.js"></script>
-		<script src="aceAdmin/assets/js/src/ace.touch-drag.js"></script>
-		<script src="aceAdmin/assets/js/src/ace.sidebar.js"></script>
-		<script src="aceAdmin/assets/js/src/ace.sidebar-scroll-1.js"></script>
-		<script src="aceAdmin/assets/js/src/ace.submenu-hover.js"></script>
-		<script src="aceAdmin/assets/js/src/ace.widget-box.js"></script>
-		<script src="aceAdmin/assets/js/src/ace.settings.js"></script>
-		<script src="aceAdmin/assets/js/src/ace.settings-rtl.js"></script>
-		<script src="aceAdmin/assets/js/src/ace.settings-skin.js"></script>
-		<script src="aceAdmin/assets/js/src/ace.widget-on-reload.js"></script>
-		<script src="aceAdmin/assets/js/src/ace.searchbox-autocomplete.js"></script>
-		<!-- the following scripts are used in demo only for onpage help and you don't need them -->
-		<link rel="stylesheet" href="aceAdmin/assets/css/ace.onpage-help.css" />
-		<link rel="stylesheet" href="aceAdmin/docs/assets/js/themes/sunburst.css" />
-
-		<script type="text/javascript"> ace.vars['base'] = '..'; </script>
-		<script src="aceAdmin/assets/js/src/elements.onpage-help.js"></script>
-		<script src="aceAdmin/assets/js/src/ace.onpage-help.js"></script>
-		<script src="aceAdmin/docs/assets/js/rainbow.js"></script>
-		<script src="aceAdmin/docs/assets/js/language/generic.js"></script>
-		<script src="aceAdmin/docs/assets/js/language/html.js"></script>
-		<script src="aceAdmin/docs/assets/js/language/css.js"></script>
-		<script src="aceAdmin/docs/assets/js/language/javascript.js"></script>
-		<script type="text/javascript">
-			$(function(){
-				var height = $(window).height() - $("#navbar").height() - $("#breadcrumbs").height() - 10;
-				$("#content").height(height);
-				$(window).resize(function(){
-					var height = $(window).height() - $("#navbar").height() - $("#breadcrumbs").height() - 10;
-					$("#content").height(height);
-				});
-			});
-			
-			function select(obj){
-				$("#nosel li").attr("class" , "");
-				$(obj).attr("class" , "active open");
-			}
-		</script>
-	</head>
-
-	<body class="no-skin">
-		<!-- #section:basics/navbar.layout -->
-		<div id="navbar" style="background-image: url(img/bj1.jpg); background-size:cover" class="navbar navbar-default          ace-save-state">
-			<div class="navbar-container ace-save-state" id="navbar-container">
-				<!-- #section:basics/sidebar.mobile.toggle -->
-				<button type="button" class="navbar-toggle menu-toggler pull-left" id="menu-toggler" data-target="#sidebar">
-					<span class="sr-only">Toggle sidebar</span>
-
-					<span class="icon-bar"></span>
-
-					<span class="icon-bar"></span>
-
-					<span class="icon-bar"></span>
-				</button>
-
-				<!-- /section:basics/sidebar.mobile.toggle -->
-				<div class="navbar-header pull-left" >
-					<!-- #section:basics/navbar.layout.brand -->
-					<a href="#" class="navbar-brand" >
-						<small>
-							<i class="glyphicon glyphicon-briefcase"></i>
-							&emsp;履历介绍
-						</small>
-					</a>
-
-					<!-- /section:basics/navbar.layout.brand -->
-
-					<!-- #section:basics/navbar.toggle -->
-
-					<!-- /section:basics/navbar.toggle -->
-				</div>
-			</div><!-- /.navbar-container -->
+<section id="banner" class="major">
+	<div class="inner">
+		<header class="major">
+			<h2>Hi, 我是李晓阳。This is My Blog!</h2>
+		</header>
+		<div class="content">
+			<p style="text-transform: uppercase;">&emsp;记录这我的点点滴滴 &emsp;&emsp;<br/> &emsp;希望这对你会有所帮助！</p>
+			<ul class="actions">
+				<li><a href="#one" class="button next scrolly">NOW 开始吧</a></li>
+			</ul>
 		</div>
+	</div>
+</section>
 
-		<!-- /section:basics/navbar.layout -->
-		<div   class="main-container ace-save-state" id="main-container">
-			<script type="text/javascript">
-				try{ace.settings.loadState('main-container')}catch(e){}
-			</script>
+<!-- Main -->
+<div id="main">
 
-			<!-- #section:basics/sidebar -->
-			<div id="sidebar" class="sidebar                  responsive                    ace-save-state">
-				<script type="text/javascript">
-					try{ace.settings.loadState('sidebar')}catch(e){}
-				</script>
+<!-- One -->
+<section id="one" class="tiles">
+        <article>
+                <span class="image">
+                        <img src="images/pic01.jpg" alt="" />
+                </span>
+                <header class="major">
+                        <h3><a href="pageutil.html" class="link">封装分页工具</a></h3>
+                        <p>将分页所需数据的算法封装，更简便的使用分页！</p>
+                </header>
+        </article>
+        <article>
+                <span class="image">
+                        <img src="images/pic02.jpg" alt="" />
+                </span>
+                <header class="major">
+                        <h3><a href="Jfinal.html" class="link">JFinal敏捷开发框架</a></h3>
+                        <p>轻量级的快速开发框架，大幅提高开发速度，降低开发成本的选择。</p>
+                </header>
+        </article>
+</section>
 
-				<div class="sidebar-shortcuts" id="sidebar-shortcuts">
-					<div class="sidebar-shortcuts-large" id="sidebar-shortcuts-large">
-						<h5 class="grey lighter smaller">
-							<span  class="gray bigger-125">
-								<i class="ace-icon fa fa-sitemap"></i>
-								导航栏
-							</span>
-						</h5>
-						<!-- /section:basics/sidebar.layout.shortcuts -->
-					</div>
+<!-- Two -->
+<section id="two">
+	<div class="inner">
+		<header class="major">
+			<h2>换个样式？</h2>
+		</header>
+		<p>换一种方式？  将信息以列表方式展示。</p>
+		<ul class="actions">
+			<li><a href="landing.html" class="button next">NOW 转变</a></li>
+		</ul>
+	</div>
+</section>
 
-					<div class="sidebar-shortcuts-mini" id="sidebar-shortcuts-mini">
-						<span class="btn btn-success"></span>
+</div>
 
-						<span class="btn btn-info"></span>
-
-						<span class="btn btn-warning"></span>
-
-						<span class="btn btn-danger"></span>
-					</div>
-				</div><!-- /.sidebar-shortcuts -->
-
-				<ul id="nosel" class="nav nav-list">
-					<li onclick="select(this);" class="active open">
-						<a href="resume.html" target="content">
-							<i class="menu-icon fa fa-envelope"></i>
-							<span class="menu-text"> 个人信息 </span>
-						</a>
-
-						<b class="arrow"></b>
-					</li>
-					<li onclick="select(this);" class="">
-						<a href="timeline.html" target="content" >
-							<i class="menu-icon fa fa-share-alt"></i>
-							<span class="menu-text">履历时间轴 </span>
-						</a>
-
-						<b class="arrow"></b>
-					</li>
-
-					<li onclick="select(this);" class="">
-						<a href="gallery.html" target="content">
-							<i class="menu-icon fa fa-picture-o"></i>
-							<span class="menu-text"> Java相关截图 </span>
-						</a>
-
-						<b class="arrow"></b>
-					</li>
-					
-					<li onclick="select(this);" class="">
-						<a href="http://lxysoft.github.io" target="_blank">
-							<i class="menu-icon fa fa-github" aria-hidden="true"></i>
-							<span class="menu-text">我的博客</span>
-						</a>
-
-						<b class="arrow"></b>
-					</li>
-				</ul><!-- /.nav-list -->
-
-				<!-- #section:basics/sidebar.layout.minimize -->
-				<div class="sidebar-toggle sidebar-collapse" id="sidebar-collapse">
-					<i id="sidebar-toggle-icon" class="ace-icon fa fa-angle-double-left ace-save-state" data-icon1="ace-icon fa fa-angle-double-left" data-icon2="ace-icon fa fa-angle-double-right"></i>
+ <!-- Contact -->
+<section id="contact">
+	<div class="inner">
+		<section class="split">
+			<section>
+				<div class="contact-method">
+					<span class="icon alt fa-envelope"></span>
+					<h3>Email</h3>
+					<span>lxysoft@foxmail.com</span>
 				</div>
-
-				<!-- /section:basics/sidebar.layout.minimize -->
-			</div>
-
-			<!-- /section:basics/sidebar -->
-			<div class="main-content">
-				<div class="main-content-inner">
-					<!-- #section:basics/content.breadcrumbs -->
-					<div class="breadcrumbs ace-save-state" id="breadcrumbs">
-						<ul class="breadcrumb">
-							<li>
-								<i class="ace-icon fa fa-home home-icon"></i>
-								<a href="index.html">首页</a>
-							</li>
-					</div>
-
-					<!-- /section:basics/content.breadcrumbs -->
-					<iframe id="content" width="100%" src="resume.html" name="content" frameborder="no"></iframe>
+			</section>
+		</section>
+		<section class="split">
+			<section>
+				<div class="contact-method">
+					<span class="icon alt fa-home"></span>
+					<h3>Address</h3>
+					<span>北京</span>
 				</div>
-			</div><!-- /.main-content -->
+			</section>
+		</section>
+	</div>
+</section>
+</div>
 
-			<a href="#" id="btn-scroll-up" class="btn-scroll-up btn btn-sm btn-inverse">
-				<i class="ace-icon fa fa-angle-double-up icon-only bigger-110"></i>
-			</a>
-		</div><!-- /.main-container -->
-	</body>
+<!-- Scripts -->
+	<script src="js/jquery.min.js"></script>
+	<script src="js/jquery.scrolly.min.js"></script>
+	<script src="js/jquery.scrollex.min.js"></script>
+	<script src="js/skel.min.js"></script>
+	<script src="js/util.js"></script>
+	<!--[if lte IE 8]><script src="js/ie/respond.min.js"></script><![endif]-->
+	<script src="js/main.js"></script>
+</body>
+
 </html>
